[package]
name = "Orca-Poolman"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
derive_more = { version = "2.1.1", features = ["from", "error", "display", "full"] }
futures = "0.3.31"
clap = { version = "4.5.54", features = ["env", "derive"] }
reqwest = "0.13.1"
notify = "8.2.0"
directories = "6.0.0"
